Fix Logo on mobile

--- a/addons/Logo.css
+++ b/addons/Logo.css
@@ -18,7 +18,7 @@
 }
 
 .layout-mobile .detailLogo {
-    display: none;
+    display: none !important;
 }
 
 .layout-mobile .detailPagePrimaryContainer.padded-left.padded-right.detailRibbon {
